--- a/src/components/Chart/ChartCommenStyle.css
+++ b/src/components/Chart/ChartCommenStyle.css
@@ -4,3 +4,14 @@
   width: 100%;
   height: 500px;
 }
+.myList {
+  background-color: #FFFFFF;
+  padding: 20px;
+  padding-left: 0px;
+}
+.trumbnailChart {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+}
